Fixing datalist on mobile

--- a/src/component/global.css
+++ b/src/component/global.css
@@ -127,3 +127,14 @@ a:active {
         display: block;
     }
 }
+
+@media (min-width: 700px) {
+    .mobile {
+        display: none;
+    }
+}
+@media (max-width: 700px) {
+    .desktop {
+        display: none;
+    }
+}
